Revision history for autodie

2.08
        * BUGFIX: Addeds support for chmod.  Many thanks to
          Jonathan Yu for reporting this (RT #50423).

        * BUGFIX: Multi-arg open is now supported by open.
          Many thanks to Nick Ncleaton for finding and fix this
          bug.  (RT #52427)

2.07  Fri Jul 31 16:35:40 BST 2009

        * FEATURE: Added ->eval_error to autodie::exception, which
          stores the contents of $@ at the time autodie throws its
          own exception.  This is useful when dealing with modules
          such as Text::Balanced which set (but do not throw)
          $@ on error.

        * TEST: Checking for flock() support no longer causes
          test failures on older VMS sysstems. (RT #47812)
          Thanks to Craig A. Berry for supplying a patch.

        * TEST: hints.t tests should no longer cause bogus
          failures relating to File::Copy on VMS and Windows
          systems prior to Perl 5.10.2.

2.06  Tue Jul  7 00:01:37 AUSEST 2009

        * BUG: Explicitly documented that autodie does NOT play
          nicely with string evals, especially under Perl 5.10.x.
          Please avoid using string evals while autodie is in scope.

        * TEST: Check for autodie leaking out of scope in the
          presence of string evals.  (string-eval-leak.t)
          Thanks to Florian Ragwitz and Vincent Pit for identifying
          this.

        * BUGFIX: autodie once again correctly works when used
          inside a string eval.  (This was accidently broken
          somewhere around 1.997-1.998).

2.05  Sat Jul  4 16:33:01 AUSEST 2009

        * BUGFIX: format_default() in autodie::exception no longer
          returns a string with file and line attached.  This would
          cause the file and line information to appear twice when
          format handlers would choose to fall back to the defaults.
          The file and line information is now always added by